:bug: Cente on page + :lipstick: Blurrying background

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,7 +1,18 @@
 :root {
     --white: #fff;
     --grey: #6b7280;
-    --transparence: rgba(128, 128, 128, 0.2);
+    --blurry: rgba(128, 128, 128, 0.2);
+}
+
+.modal__background--blurry {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
 }
 
 .modal__wrapper {
@@ -10,6 +21,10 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    left: 50%;
+    top: 50%; 
+    margin-left: -150px;
+    margin-top: -150px;
     min-height: 85px;
     width: fit-content;
     height: fit-content;
@@ -50,7 +65,7 @@
 .modal__btn {
     font: inherit;
     color: inherit;
-    background: var(--transparence);
+    background: var(--blurry);
     cursor: pointer;
     outline: inherit;
     border-radius: 5px;
@@ -68,7 +83,7 @@
 
 .modal__btn--close:hover {
     border-radius: 5px;
-    background-color: var(--transparence);
+    background-color: var(--blurry);
 }
 
 .modal__btn:focus,
